--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ matrix:
         env: TOX_ENV=py34
       - python: 3.5
         env: TOX_ENV=py35
+      - python: 3.6
+        env: TOX_ENV=py36
 
 script: tox -e $TOX_ENV
 
