--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,13 @@
 [tox]
 envlist =
-        py34,
+        py27
+        py34
         py35
         py36
 
 [testenv]
 commands =
 	python setup.py test
+
+deps =
+    -rrequirements.txt
