--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,11 @@
 language: python
+python:
+  - 3.8
+  - 3.7
+  - 3.6
+  - 3.5
+  - 3.4
 
-matrix:
-    include:
-      - python: 3.4
-        env: TOX_ENV=py34
-      - python: 3.5
-        env: TOX_ENV=py35
-      - python: 3.6
-        env: TOX_ENV=py36
+install: pip install -U tox-travis
 
-script: tox -e $TOX_ENV
-
-install:
-    - pip install -r requirements.txt
-    - pip install tox
-
-notifications:
-  email: false
+script: tox
