--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,17 @@
 [tox]
-envlist =
-        py34,
-        py35
-        py36
-        py37
+envlist = py34, py35, py36, py37, py38
+
+[travis]
+python =
+    3.8: py38
+    3.7: py37
+    3.6: py36
+    3.5: py35
+    3.4: py34
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
 deps = pytest
 commands =
-	py.test tests
+	pytest
